# ANLP_project

./: .gitignore  pyproject.toml
data/: df_annotation.pickle  df_baseline.pickle  df_indexes.pickle  df_pivoted.pickle  df_tags.pickle  df_uni_bi_tri_normalized_IC.pickle  df_uni_bi_tri_normalized_POS.pickle  measures.md
data/outputs/: cosine_similarity.json  language_lookup.json  languages_tree_newick_format.txt  linguistic_similarities.csv  linguistic_vectors.csv  logreg_similarity.csv  logreg_similarity.json  logreg_similarity_4lang.csv  logreg_similarity_SC_IC.csv  logreg_similarity_SC_IC_uni.csv  logreg_similarity_SC_IC_uni_new.csv  logreg_similarity_new.csv
data/version 1.0/code/: 00_readme code.txt  MECO-L2-osf.R
data/version 1.0/primary data/: 00_readme primary data.txt
data/version 1.1/auxiliary files/: 00_readme supplementary.txt
parser/: UD_English-EWT.json  code.sh  conv.py  gaze.input.conllu  gaze.out.mbert.conllu  gaze.out.mluke.conllu  gaze.out.xlmr.conllu  notes  params-mbert.json  params-mluke.json  params-xlmr.json
scripts/: 1_data_exploration.ipynb  2_data_preparation_new.ipynb  3_data_merging_tags.ipynb  5_logreg_model_new.ipynb  6_linguistic_data_retrieval.ipynb  7_plots.ipynb  URIEL_data.py  anita-playground-notebook.ipynb  bigrams_trigrams.ipynb  data_exploration.ipynb  data_preparation.ipynb  data_preparation_new.ipynb  functions.py  logreg_model.ipynb  logreg_model_new.ipynb  model.ipynb  plots.ipynb
scripts/.ipynb_checkpoints/: plots-checkpoint.ipynb
scripts/old_stuff/: logreg_model_old.ipynb
(+26 files in other folders)
