[tool.poetry]
name = "anlp-project"
version = "0.1.0"
description = ""
authors = ["linaskerath <lina.skerath@gmail.com>"]
readme = "README.md"
packages = [{include = "anlp_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
rdata = "^0.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
