[tool.poetry]
name = "anlp-project"
version = "0.1.0"
description = ""
authors = ["linaskerath <lina.skerath@gmail.com>"]
readme = "README.md"
packages = [{include = "anlp_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
rdata = "^0.9"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
fastparquet = "^2022.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
